--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fkill": "^7.2.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.0"
+    "mongoose": "^6.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
