add google auth

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://vaishnavi11:neha@masterproject.pjyxb.mongodb.net/zomato?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID=626482387690-trsefmnagco5p908bst38g09mkqtgvvl.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=SymJ1WddDvpCCPL7Z6hHmWVr
