add image uploader route

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb+srv://vaishnavi11:neha@masterproject.pjyxb.mongodb.net/zomato?retryWrites=true&w=majority
 GOOGLE_CLIENT_ID=626482387690-trsefmnagco5p908bst38g09mkqtgvvl.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=SymJ1WddDvpCCPL7Z6hHmWVr
+AWS_S3_ACCESS_KEY=AKIASLJVLGDJW77AJIBI
+AWS_S3_SECRET_KEY=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
