--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
