--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-star-rating-component": "^1.4.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
