--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-viewer": "^1.1.1",
     "react-slick": "^0.28.1",
     "react-star-rating-component": "^1.4.1",
     "slick-carousel": "^1.8.1",
