add restaurant reducer & image reducer

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ GOOGLE_CLIENT_ID=626482387690-trsefmnagco5p908bst38g09mkqtgvvl.apps.googleuserco
 GOOGLE_CLIENT_SECRET=SymJ1WddDvpCCPL7Z6hHmWVr
 AWS_S3_ACCESS_KEY=AKIASLJVLGDJW77AJIBI
 AWS_S3_SECRET_KEY=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
+MAILGUN__API__KEY=ca81352b364caea6d480fffa264d761e-dbdfb8ff-a7e826a0
+MAILGUN__DOMAIN=sandbox500a2d89fe344d43aff7c11bc7a7abff.mailgun.org
